kustomize/overlays/eks/flyte/ingress/ingress_grpc.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/backend-protocol-version: GRPC
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: service_instance=production
    kubernetes.io/ingress.class: alb
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    alb.ingress.kubernetes.io/group.name: flytesystem

    # Replace certificate Arn with one deployed to your EKS cluster. Follow instructions in README.md
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:111111111111:certificate/e92fefd8-6197-4249-a524-431d611c9af6
  labels:
    app: flyteadmin
  name: flytesystem-grpc
  namespace: flyte
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: flyteadmin
                port:
                  number: 81
            path: /flyteidl.service.*
            pathType: ImplementationSpecific
          - backend:
              service:
                name: flyteadmin
                port:
                  number: 81
            path: /flyteidl.service.AdminService/*
            pathType: ImplementationSpecific
          - backend:
              service:
                name: flyteadmin
                port:
                  number: 81
            path: /flyteidl.service.AuthMetadataService/*
            pathType: ImplementationSpecific
          - backend:
              service:
                name: flyteadmin
                port:
                  number: 81
            path: /flyteidl.service.IdentityService/*
            pathType: ImplementationSpecific
